# maps4fsapi

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.base  Dockerfile.blender  Dockerfile.nuitka  Dockerfile.test  README.md  demo.py  entrypoint.sh  pyproject.toml  requirements.txt  requirements_test.txt
.github/workflows/: build_base_blender.yml  build_base_maps4fsapi.yml  build_docker_image.yml  build_docker_image_test.yml  build_nuitka_test.yml  checks.yml  manual_docker_build.yml  manual_redeploy.yml
dev/: clean_trash.ps1  create_symlink.sh  create_venv.sh  pydoc.sh  requirements.txt
maps4fsapi/: config.py  limits.py  main.py  storage.py  tasks.py  validation.py
maps4fsapi/components/: README.md  dem.py  dtm.py  grle.py  i3d.py  map.py  mesh.py  models.py  satellite.py  server.py  task.py  templates.py  texture.py  users.py
