[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maps4fsapi"
version = "0.0.2"
description = "Api for maps4fs, a tool for creating maps for Farming Simulator games."
authors = [{name = "iwatkot", email = "iwatkot@gmail.com"}]
license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
keywords = ["farmingsimulator", "fs", "farmingsimulator22", "farmingsimulator25", "fs22", "fs25"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn",
    "fastapi",
    "maps4fs",
    "cachetools",
    "slowapi",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/iwatkot/maps4fsapi"
Repository = "https://github.com/iwatkot/maps4fsapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["maps4fsapi*"]
exclude = ["dev*", "bot*", "*data", "*docker", "*webui", "*docs"]
